[package]
name = "elcharitas"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.55"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.39"
cookie = "0.18"
dotenv = "0.15"
lazy_static = "1.5"
ngyn = { version = "0.5.4", git = "https://github.com/ngyn-rs/ngyn.git", branch = "feat--add-error-handling-and-improve-request-processing" }
momenta = { version = "0.2", git = "https://github.com/elcharitas/momenta.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
datastar = "0.2.1"
async-stream = "0.3.6"

[features]
wasm = []
