[package]
name = "elcharitas-new"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
momenta = { version = "0.2", git = "https://github.com/elcharitas/momenta.git", branch = "main" }
lazy_static = "1.5"
url = "2.5"
uuid = { version = "1.0", features = ["v4", "js"] }
comrak = "0.39"

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.5", features = ["http"] }
console_error_panic_hook = "0.1"
axum = { version = "0.8", default-features = false, features = ["multipart", "query"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
thiserror = "2.0"
cookie = "0.18"
tower = "0.5"
wasm-bindgen-futures = "0.4"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-stream = "0.3.6"
axum = { version = "0.8", features = ["multipart"] }
cached = "0.55"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
dotenv = "0.15"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
wasm = []

[lib]
crate-type = ["cdylib"]
